# traceway

./: .gitignore  CLAUDE.md  DOCKER.md  DOCKER_SIGNATURES.md  Dockerfile.sqlite  README.md  SPEC_NON_ROOT_TRACES.md  docker-compose.sqlite.yml  docker-compose.yml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: benchmark-hardware.yml  benchmark-processor.yml  benchmark-symbolicator-cache.yml  benchmark-symbolicator.yml  cli.yml  release-cli.yml  release-docs.yml  release-helm.yml  release-traceway.yml  release-website.yml
backend/: .env.docker  go.mod  go.sum  traceway.go
backend/app/symbolicator/sourcemap/scopes/oxc-shim/: Cargo.toml
backend/app/symbolicator/sourcemap/scopes/oxc-shim/src/: lib.rs
backend/cmd/: options.go  run.go  seed.go
benchmarks/: LOCAL.md  README.md
benchmarks/compose/: docker-compose.managed-ch.yml  docker-compose.pgch.yml
benchmarks/loadgen/: go.mod  ingest.go  main.go  otlp_common.go  otlp_logs.go  otlp_metrics.go  otlp_spans.go  ramp.go  read_probe.go  stats.go
benchmarks/processor/: .gitignore  README.md  config-honeycomb-ios.yaml  config-honeycomb.yaml  (+7 more)
cli/: .gitignore  README.md  flake.nix  go.mod  go.sum  justfile
docs/: CLAUDE.md  theme.config.jsx
frontend/: package-lock.json  package.json  vite.config.ts
scripts/: backfill-github-releases.sh  benchmark-symbolicator.sh  build-and-bundle-frontend.sh  build-frontend.sh  build-local.sh  build-oxc-shim.sh  release-traceway.sh
testing/: test_metric_data.sql  test_metric_widgets.sql
website/: package-lock.json  package.json  wrangler.toml
(+2978 files in other folders)
